implemeted delete request -> disconnect from server
